--- a/rjc_account_form/static/scss/style_account_report.scss
+++ b/rjc_account_form/static/scss/style_account_report.scss
@@ -218,8 +218,8 @@
             }
             tfoot {
                 tr td {
-                    border-top: 1px solid black !important;
-                    border-bottom: 1px solid black !important;
+                    border-top: none;
+                    border-bottom: none;
                 }
             }
         }
