--- a/rjc_account_form/reports/payment_voucher_layout.xml
+++ b/rjc_account_form/reports/payment_voucher_layout.xml
@@ -56,10 +56,10 @@
                 <table class="table table-sm">
                     <thead>
                         <tr class="text-left">
-                            <th>ใบส่งสินค้า / Invoice No.</th>
-                            <th>รายการ / Description</th>
-                            <th>วันที่ / Date</th>
-                            <th>จำนวนเงิน / Amount</th>
+                            <th class="inv_no">ใบส่งสินค้า / Invoice No.</th>
+                            <th class="description">รายการ / Description</th>
+                            <th class="date">วันที่ / Date</th>
+                            <th class="amount">จำนวนเงิน / Amount</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -71,16 +71,16 @@
                             <t t-set="payment_amount" t-value="line._get_payments_widget(payment_widget, o.id, 'amount', type)"/>
                             <t t-set="total_payment" t-value="total_payment + payment_amount"/>
                             <tr>
-                                <td>
+                                <td class="inv_no">
                                     <span t-field="line.reference"/>
                                 </td>
-                                <td>
+                                <td class="description">
                                     <span t-field="line.comment"/>
                                 </td>
-                                <td>
+                                <td class="date">
                                     <span t-field="line.date_invoice"/>
                                 </td>
-                                <td class="text-right">
+                                <td class="amount text-right">
                                     <span t-esc="'{0:,.2f}'.format(payment_amount)"/>
                                 </td>
                             </tr>
@@ -157,7 +157,8 @@
                     <tfoot>
                         <tr>
                             <td>
-                                บัญชี / A/C : <span t-field="o.journal_id"/>
+                                บัญชี / A/C :<br/>
+                                <span t-field="o.journal_id"/>
                             </td>
                             <td>
                                 Payment Ref : <span t-field="o.cheque_no"/>
