[FIX] position from voucher

--- a/rjc_account_form/reports/payment_voucher_layout.xml
+++ b/rjc_account_form/reports/payment_voucher_layout.xml
@@ -157,7 +157,7 @@
                     <tfoot>
                         <tr>
                             <td>
-                                บัญชี / A/C : <span t-field="o.journal_id"/>
+                                บัญชี / A/C : <span t-field="o.journal_id.name"/>
                             </td>
                             <td>
                                 Payment Ref : <span t-field="o.cheque_no"/>
