--- a/rjc_account_form/static/scss/style_account_report.scss
+++ b/rjc_account_form/static/scss/style_account_report.scss
@@ -210,6 +210,38 @@
                     border-top: 1px solid black !important;
                     border-bottom: 1px solid black !important;
                 }
+                th.no {
+                    table-layout: fixed;
+                    width: 5%;
+                }
+                th.date {
+                    table-layout: fixed;
+                    width: 10%;
+                }
+                th.inv_no {
+                    table-layout: fixed;
+                    width: 10%;
+                }
+                th.amount {
+                    table-layout: fixed;
+                    width: 15%;
+                }
+                th.net_amount {
+                    table-layout: fixed;
+                    width: 15%;
+                }
+                th.payment_paid {
+                    table-layout: fixed;
+                    width: 15%;
+                }
+                th.payment_amount {
+                    table-layout: fixed;
+                    width: 15%;
+                }
+                th.payment_balance {
+                    table-layout: fixed;
+                    width: 15%;
+                }
             }
             tbody {
                 tr td {
