--- a/rjc_stock_form/reports/deliveryslip_layout.xml
+++ b/rjc_stock_form/reports/deliveryslip_layout.xml
@@ -93,6 +93,7 @@
                         <thead>
                             <tr>
                                 <th><strong>Description</strong></th>
+                                <th><strong>Product</strong></th>
                                 <th><strong>Quantity</strong></th>
                             </tr>
                         </thead>
@@ -101,6 +102,9 @@
                             <tr t-foreach="lines" t-as="move">
                                 <td>
                                     <span t-field="move.name"/>
+                                </td>
+                                <td>
+                                    <span t-field="move.product_id.name"/>
                                 </td>
                                 <td>
                                     <span t-esc="'{0:,.2f}'.format(move.product_uom_qty)"/>
@@ -114,6 +118,7 @@
                         <thead>
                             <tr>
                                 <th><strong>Description</strong></th>
+                                <th><strong>Product</strong></th>
                                 <t t-if="has_serial_number">
                                     <th name="lot_serial" groups="stock.group_lot_on_delivery_slip">
                                         Lot/Serial Number
@@ -129,6 +134,9 @@
                             <tr t-foreach="o.move_line_ids" t-as="move_line">
                                 <td>
                                     <span t-field="move_line.move_id.name"></span>
+                                </td>
+                                <td>
+                                    <span t-field="move_line.product_id.name"/>
                                 </td>
                                 <td t-if="has_serial_number and move_line.lot_name" groups="stock.group_lot_on_delivery_slip">
                                     <span t-field="move_line.lot_name"/>
