--- a/rjc_stock/views/stock_move_views.xml
+++ b/rjc_stock/views/stock_move_views.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="stock.view_stock_move_line_operation_tree"/>
         <field name="arch" type="xml">
             <field name="lot_id" position="attributes">
-                <attribute name="options">{'create': True}</attribute>
+                <attribute name="options">{'create': False}</attribute>
             </field>
         </field>
     </record>
